# tonisynthfunc

./: .coveragerc  .gitignore  API_DOCUMENTATION.md  BEDTIME_STORIES_GUIDE.md  CONTRIBUTING.md  DEVELOPMENT.md  FUNCTION_CHANGES.md  IOS_SHORTCUTS_GUIDE.md  LAB2_PAGE1.md  LAB2_PAGE2.md  LAB2_PAGE3.md  README.md  TEST_NEW_WORKFLOW.md  azure_clients.py  character_voices.py  exceptions.py  filename_utils.py  function_app.py  function_app_old.py  gender_detection.py  http_helpers.py  iOS_SHORTCUTS_SETUP.md  imp-prompt..md  logging_config.py  markdown_utils.py  pyproject.toml  requirements.txt  storage_cleanup.py  story_config.py  validators.py
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  copilot_agent_task.md  feature_request.md
.github/workflows/: ci-cd.yml
docs/implementation-plans/: intelligent-file-naming.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tests/: test_character_voices.py  test_exceptions.py  test_filename_utils.py  test_function_app.py  test_gender_detection.py  test_http_helpers.py  test_logging_config.py  test_markdown_utils.py  test_story_config.py  test_validators.py
